[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "3.0.0", features = ["time_0_3"] }
time = "0.3.21"
time-macros = "0.2.9"
uuid = { version = "1.3.3", features = ["v4"] }
